k8s/user-apps/homepage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-ftsell.de
      hosts:
        - ftsell.de
        - www.ftsell.de
  rules:
    - host: ftsell.de
      http: &http
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
          - path: /pixelflut.sock
            pathType: Exact
            backend:
              service:
                name: pixelflut-intern
                port:
                  name: websocket
          - path: /verysecretriddles
            pathType: Prefix
            backend:
              service:
                name: website-riddles
                port:
                  name: http
    - host: www.ftsell.de
      http: *http
